--- a/package.json
+++ b/package.json
@@ -25,22 +25,23 @@
   },
   "homepage": "https://github.com/krbaio3/gm-react#readme",
   "dependencies": {
-    "bootstrap": "~3.3.7",
-    "react": "~15.4.2",
-    "react-dom": "~15.4.2"
+    "bootstrap": "~4.0.0-alpha.6",
+    "react": "~15.6.1",
+    "react-dom": "~15.6.1"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^3.1.2",
-    "@types/react": "15.0.20",
+    "@types/node": "^8.0.16",
+    "@types/react": "~15.0.20",
     "@types/react-dom": "~0.14.18",
-    "css-loader": "~0.27.3",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "~0.10.1",
-    "html-webpack-plugin": "~2.28.0",
-    "style-loader": "~0.16.0",
-    "typescript": "~2.2.1",
+    "awesome-typescript-loader": "^3.1.2",
+    "css-loader": "~0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "~0.11.2",
+    "html-webpack-plugin": "~2.29.0",
+    "style-loader": "~0.18.2",
+    "typescript": "~2.4.2",
     "url-loader": "~0.5.7",
-    "webpack": "~2.3.2",
-    "webpack-dev-server": "^2.4.2"
+    "webpack": "~3.3.0",
+    "webpack-dev-server": "~2.6.1"
   }
 }
