--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "git+https://github.com/krbaio3/gm-react.git"
   },
   "author": "jorge carballo alonso krbaio3@gmail.com",
-  "license": "ISC",
+  "license": "Apache Licence 2.0",
   "bugs": {
     "url": "https://github.com/krbaio3/gm-react/issues"
   },
@@ -32,7 +32,7 @@
   "devDependencies": {
     "@types/node": "^8.0.16",
     "@types/react": "~15.0.20",
-    "@types/react-dom": "~0.14.18",
+    "@types/react-dom": "~15.5.1",
     "awesome-typescript-loader": "^3.1.2",
     "css-loader": "~0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
@@ -41,6 +41,17 @@
     "style-loader": "~0.18.2",
     "typescript": "~2.4.2",
     "url-loader": "~0.5.7",
+    "copy-webpack-plugin": "~4.0.1",
+    "eslint": "~4.3.0",
+    "eslint-config-airbnb-base": "~11.3.0",
+    "eslint-plugin-import": "~2.7.0",
+    "node-sass": "~4.5.3",
+    "npm-run-all": "~4.0.2",
+    "preprocess-loader": "~0.2.2",
+    "rimraf": "~2.6.1",
+    "sass-lint": "~1.10.2",
+    "sass-loader": "~6.0.5",
+    "tslint-config-airbnb": "~5.2.1",
     "webpack": "~3.3.0",
     "webpack-dev-server": "~2.6.1"
   }
