--- a/package.json
+++ b/package.json
@@ -33,26 +33,27 @@
     "@types/node": "^8.0.16",
     "@types/react": "~15.0.20",
     "@types/react-dom": "~15.5.1",
-    "awesome-typescript-loader": "^3.1.2",
-    "css-loader": "~0.28.4",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "~0.11.2",
-    "html-webpack-plugin": "~2.29.0",
-    "style-loader": "~0.18.2",
-    "typescript": "~2.4.2",
-    "url-loader": "~0.5.7",
+    "awesome-typescript-loader": "~3.2.0",
     "copy-webpack-plugin": "~4.0.1",
+    "css-loader": "~0.28.4",
     "eslint": "~4.3.0",
     "eslint-config-airbnb-base": "~11.3.0",
     "eslint-plugin-import": "~2.7.0",
+    "express": "^4.15.3",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "~0.11.2",
+    "html-webpack-plugin": "~2.29.0",
     "node-sass": "~4.5.3",
     "npm-run-all": "~4.0.2",
     "preprocess-loader": "~0.2.2",
     "rimraf": "~2.6.1",
     "sass-lint": "~1.10.2",
     "sass-loader": "~6.0.5",
+    "style-loader": "~0.18.2",
     "tslint-config-airbnb": "~5.2.1",
-    "webpack": "~3.3.0",
+    "typescript": "~2.4.2",
+    "url-loader": "~0.5.7",
+    "webpack": "~3.4.0",
     "webpack-dev-server": "~2.6.1"
   }
 }
