--- a/package.json
+++ b/package.json
@@ -1,18 +1,30 @@
 {
   "name": "erp-home-motor",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "home de erp gestion-motor",
   "main": "main.tsx",
   "scripts": {
+    "init": "npm install --verbose",
+    "postinstall": "npm dedupe",
+    "build": "npm run clean && webpack --display-error-details",
+    "dist": "npm run clean && webpack -p --display-error-details",
+    "clean": "rimraf dist",
     "start": "webpack-dev-server --inline",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rimraf dist",
+    "commit": "git pull && git commit -a -m",
+    "tag": "npm run clean && webpack --config webpack.config.js -p --display-error-details && git add -A dist && git commit -m \"Generar Distribuido\" ",
+    "version:path": "npm version patch -m ",
+    "version:minor": "npm version minor -m ",
+    "version:mayor": "npm version major -m ",
+    "postversion": "echo \"Esto es una prueba\" ",
+    "prueba": "git push origin ",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "eslint": "npm run eslint:flag -- src",
     "eslint:flag": "./node_modules/.bin/eslint --fix",
     "sass": "node-sass app/sass/main.scss app/sass/main.css",
-    "build": "npm run clean && webpack --display-error-details",
     "mocks": "node server/app.js",
-    "serve": "webpack-dev-server --debug --progress --colors --open"
+    "serve": "webpack-dev-server --debug --progress --colors --open",
+    "release": "node ./node_modules/.bin/standard-version"
   },
   "repository": {
     "type": "git",
@@ -25,35 +37,35 @@
   },
   "homepage": "https://github.com/krbaio3/gm-react#readme",
   "dependencies": {
-    "bootstrap": "~4.0.0-alpha.6",
+    "bootstrap": "^4.0.0-beta",
     "react": "~15.6.1",
     "react-dom": "~15.6.1"
   },
   "devDependencies": {
-    "@types/node": "^8.0.16",
-    "@types/react": "~15.0.20",
-    "@types/react-dom": "~15.5.1",
-    "awesome-typescript-loader": "~3.2.0",
+    "@types/node": "^8.0.20",
+    "@types/react": "~16.0.2",
+    "@types/react-dom": "~15.5.2",
+    "awesome-typescript-loader": "~3.2.2",
     "copy-webpack-plugin": "~4.0.1",
     "css-loader": "~0.28.4",
-    "eslint": "~4.3.0",
-    "eslint-config-airbnb-base": "~11.3.0",
+    "eslint": "~4.4.1",
+    "eslint-config-airbnb-base": "~11.3.1",
     "eslint-plugin-import": "~2.7.0",
-    "express": "^4.15.3",
+    "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "~0.11.2",
-    "html-webpack-plugin": "~2.29.0",
+    "html-webpack-plugin": "~2.30.1",
     "node-sass": "~4.5.3",
     "npm-run-all": "~4.0.2",
     "preprocess-loader": "~0.2.2",
     "rimraf": "~2.6.1",
     "sass-lint": "~1.10.2",
-    "sass-loader": "~6.0.5",
+    "sass-loader": "~6.0.6",
     "style-loader": "~0.18.2",
     "tslint-config-airbnb": "~5.2.1",
     "typescript": "~2.4.2",
-    "url-loader": "~0.5.7",
-    "webpack": "~3.4.0",
-    "webpack-dev-server": "~2.6.1"
+    "url-loader": "~0.5.9",
+    "webpack": "~3.5.4",
+    "webpack-dev-server": "~2.7.1"
   }
 }
