feat(fields to vehicle)

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "npm dedupe",
     "build": "npm run clean && webpack --display-error-details",
     "dist": "npm run clean && webpack -p --display-error-details",
-    "clean": "rimraf dist",
+    "clean": "node node_modules/.bin/rimraf dist",
     "start": "webpack-dev-server --inline",
     "test": "echo \"Error: no test specified\" && exit 1",
     "commit": "git pull && git commit -a -m",
@@ -18,7 +18,7 @@
     "version:mayor": "npm version major -m ",
     "postversion": "echo \"Esto es una prueba\" ",
     "prueba": "git push origin ",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+    "changelog": "node node_modules/.bin/conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "eslint": "npm run eslint:flag -- src",
     "eslint:flag": "./node_modules/.bin/eslint --fix",
     "sass": "node-sass app/sass/main.scss app/sass/main.css",
