--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "npm dedupe",
     "build": "npm run clean && webpack --display-error-details",
     "dist": "npm run clean && webpack -p --display-error-details",
-    "clean": "node node_modules/.bin/rimraf dist",
+    "clean": "rimraf dist",
     "start": "webpack-dev-server --inline",
     "test": "echo \"Error: no test specified\" && exit 1",
     "commit": "git pull && git commit -a -m",
@@ -31,13 +31,16 @@
     "url": "git+https://github.com/krbaio3/gm-react.git"
   },
   "author": "jorge carballo alonso krbaio3@gmail.com",
-  "license": "Apache Licence 2.0",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/krbaio3/gm-react/issues"
   },
   "homepage": "https://github.com/krbaio3/gm-react#readme",
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.1",
     "react": "~15.6.1",
     "react-dom": "~15.6.1"
   },
@@ -57,6 +60,8 @@
     "html-webpack-plugin": "~2.30.1",
     "node-sass": "~4.5.3",
     "npm-run-all": "~4.0.2",
+    "postcss-loader": "^2.0.6",
+    "precss": "^2.0.0",
     "preprocess-loader": "~0.2.2",
     "rimraf": "~2.6.1",
     "sass-lint": "~1.10.2",
