--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "npm dedupe",
     "build": "npm run clean && webpack --display-error-details",
     "dist": "npm run clean && webpack -p --display-error-details",
-    "clean": "rimraf dist",
+    "clean": "node node_modules/.bin/rimraf dist",
     "start": "webpack-dev-server --inline",
     "test": "echo \"Error: no test specified\" && exit 1",
     "commit": "git pull && git commit -a -m",
@@ -40,15 +40,15 @@
     "bootstrap": "^4.0.0-beta",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
-    "popper.js": "^1.12.1",
+    "popper.js": "^1.12.2",
     "react": "~15.6.1",
     "react-dom": "~15.6.1"
   },
   "devDependencies": {
-    "@types/node": "^8.0.20",
+    "@types/node": "^8.0.22",
     "@types/react": "~16.0.2",
-    "@types/react-dom": "~15.5.2",
-    "awesome-typescript-loader": "~3.2.2",
+    "@types/react-dom": "~15.5.3",
+    "awesome-typescript-loader": "~3.2.3",
     "copy-webpack-plugin": "~4.0.1",
     "css-loader": "~0.28.4",
     "eslint": "~4.4.1",
@@ -70,7 +70,7 @@
     "tslint-config-airbnb": "~5.2.1",
     "typescript": "~2.4.2",
     "url-loader": "~0.5.9",
-    "webpack": "~3.5.4",
+    "webpack": "~3.5.5",
     "webpack-dev-server": "~2.7.1"
   }
 }
