--- a/package.json
+++ b/package.json
@@ -42,7 +42,11 @@
     "jquery": "^3.2.1",
     "popper.js": "^1.12.2",
     "react": "~15.6.1",
-    "react-dom": "~15.6.1"
+    "react-addons-css-transition-group": "^15.6.0",
+    "react-addons-transition-group": "^15.6.0",
+    "react-dom": "~15.6.1",
+    "react-toolbox": "^2.0.0-beta.12",
+    "reactstrap": "^4.8.0"
   },
   "devDependencies": {
     "@types/node": "^8.0.22",
