chore(update licence)
Actualizacion licence

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "url": "git+https://github.com/krbaio3/gm-react.git"
   },
   "author": "jorge carballo alonso krbaio3@gmail.com",
-  "license": "Apache Licence 2.0",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/krbaio3/gm-react/issues"
   },
