--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.0.1",
   "description": "home de erp gestion-motor",
   "main": "main.tsx",
+  "sasslintConfig": "./.scss-lint.yml",
   "scripts": {
     "init": "npm install --verbose",
     "postinstall": "npm dedupe",
-    "build": "npm run clean && webpack --display-error-details",
+    "build": "npm run clean && npm run eslint && webpack --display-error-details",
     "dist": "npm run clean && webpack -p --display-error-details",
     "clean": "node node_modules/.bin/rimraf dist",
     "start": "webpack-dev-server --inline",
+    "poststart": "npm run prebuild",
     "test": "echo \"Error: no test specified\" && exit 1",
     "commit": "git pull && git commit -a -m",
     "tag": "npm run clean && webpack --config webpack.config.js -p --display-error-details && git add -A dist && git commit -m \"Generar Distribuido\" ",
@@ -19,8 +21,9 @@
     "postversion": "echo \"Esto es una prueba\" ",
     "prueba": "git push origin ",
     "changelog": "node node_modules/.bin/conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
-    "eslint": "npm run eslint:flag -- src",
-    "eslint:flag": "./node_modules/.bin/eslint --fix",
+    "prebuild": "node node_modules/.bin/eslint --color -f codeframe 'src/client/**/*.scss' --fix && npm run tslint",
+    "sass:lint": "node ./node_modules/.bin/sass-lint --config .scss-lint.yml 'src/client/**/*.scss' --verbose --no-exit",
+    "tslint": "node node_modules/.bin/tslint -c tslint.json 'src/client/**/*.tsx' --fix",
     "sass": "node-sass app/sass/main.scss app/sass/main.css",
     "mocks": "node server/app.js",
     "serve": "webpack-dev-server --debug --progress --colors --open",
@@ -41,6 +44,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "popper.js": "^1.12.2",
+    "postcss": "^6.0.9",
     "react": "~15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-transition-group": "^15.6.0",
@@ -49,32 +53,35 @@
     "reactstrap": "^4.8.0"
   },
   "devDependencies": {
-    "@types/node": "^8.0.22",
+    "@types/node": "^8.0.24",
     "@types/react": "~16.0.2",
     "@types/react-dom": "~15.5.3",
     "awesome-typescript-loader": "~3.2.3",
     "copy-webpack-plugin": "~4.0.1",
     "css-loader": "~0.28.4",
-    "eslint": "~4.4.1",
-    "eslint-config-airbnb-base": "~11.3.1",
-    "eslint-plugin-import": "~2.7.0",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "~0.11.2",
     "html-webpack-plugin": "~2.30.1",
     "node-sass": "~4.5.3",
     "npm-run-all": "~4.0.2",
+    "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.6",
     "precss": "^2.0.0",
     "preprocess-loader": "~0.2.2",
+    "reshake": "^1.0.7",
     "rimraf": "~2.6.1",
-    "sass-lint": "~1.10.2",
+    "sass-lint": "^1.10.2",
     "sass-loader": "~6.0.6",
     "style-loader": "~0.18.2",
+    "tslint": "^5.0.0",
     "tslint-config-airbnb": "~5.2.1",
     "typescript": "~2.4.2",
     "url-loader": "~0.5.9",
     "webpack": "~3.5.5",
     "webpack-dev-server": "~2.7.1"
+  },
+  "peerDependencies": {
+    "react-transition-group": "^1.0.0"
   }
 }
