--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "precss": "^2.0.0",
     "preprocess-loader": "~0.2.2",
     "reshake": "^1.0.7",
+    "react-transition-group": "^1.0.0",
     "rimraf": "~2.6.1",
     "sass-lint": "^1.10.2",
     "sass-loader": "~6.0.6",
@@ -81,7 +82,5 @@
     "webpack": "~3.5.5",
     "webpack-dev-server": "~2.7.1"
   },
-  "peerDependencies": {
-    "react-transition-group": "^1.0.0"
-  }
+  "peerDependencies": {}
 }
