--- a/src/server/package.json
+++ b/src/server/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.17.2",
     "crypto": "^1.0.1",
     "express": "^4.15.4",
+    "jwt-simple": "^0.5.1",
     "method-override": "^2.3.9",
     "mongooose": "^4.11.7"
   },
