--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bootstrap": "^4.0.0-beta",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "moment": "^2.18.1",
     "popper.js": "^1.12.2",
     "postcss": "^6.0.9",
     "react": "~15.6.1",
