--- a/package.json
+++ b/package.json
@@ -7,27 +7,27 @@
     "scripts": {
         "init": "npm install --verbose",
         "postinstall": "npm dedupe",
-        "build": "npm run clean && npm run eslint && webpack --display-error-details",
-        "dist": "npm run clean && webpack -p --display-error-details",
-        "clean": "node node_modules/.bin/rimraf dist",
-        "start": "webpack-dev-server --inline",
+        "build": "npm run clean && npm run tslint && node ./node_modules/webpack/bin/webpack --display-error-details",
+        "dist": "npm run clean && node ./node_modules/webpack/bin/webpack -p --display-error-details",
+        "clean": "node ./node_modules/rimraf/rimraf dist",
+        "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server --inline",
         "poststart": "npm run prebuild",
         "test": "echo \"Error: no test specified\" && exit 1",
         "commit": "git pull && git commit -a -m",
-        "tag": "npm run clean && webpack --config webpack.config.js -p --display-error-details && git add -A dist && git commit -m \"Generar Distribuido\" ",
+        "tag": "npm run clean && node ./node_modules/webpack/bin/webpack --config webpack.config.js -p --display-error-details && git add -A dist && git commit -m \"Generar Distribuido\" ",
         "version:path": "npm version patch -m ",
         "version:minor": "npm version minor -m ",
         "version:mayor": "npm version major -m ",
         "postversion": "echo \"Esto es una prueba\" ",
         "prueba": "git push origin ",
-        "changelog": "node node_modules/.bin/conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
-        "prebuild": "node node_modules/.bin/eslint --color -f codeframe 'src/client/**/*.scss' --fix && npm run tslint",
+        "changelog": "node ./node_modules/conventional-changelog/bin/conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+        "prebuild": "npm run tslint",
         "sass:lint": "node ./node_modules/.bin/sass-lint --config .scss-lint.yml 'src/client/**/*.scss' --verbose --no-exit",
-        "tslint": "node node_modules/.bin/tslint -c tslint.json 'src/client/**/*.tsx' --fix",
-        "sass": "node-sass app/sass/main.scss app/sass/main.css",
+        "tslint": "node ./node_modules/tslint/bin/tslint -c tslint.json 'src/client/**/*.tsx' --fix",
+        "sass": "node ./node_modules/node-sass/bin/node-sass app/sass/main.scss app/sass/main.css",
         "mocks": "node server/app.js",
-        "serve": "webpack-dev-server --debug --progress --colors --open",
-        "release": "node ./node_modules/.bin/standard-version",
+        "serve": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server --debug --progress --colors --open",
+        "release": "node ./node_modules/standard-version/bin/standard-version",
         "deploy": "echo \" Preparado para desplegar en Heroku \" "
     },
     "repository": {
@@ -44,44 +44,46 @@
         "bootstrap": "^4.0.0-beta",
         "font-awesome": "^4.7.0",
         "jquery": "^3.2.1",
-        "moment": "^2.18.1",
-        "popper.js": "^1.12.2",
-        "postcss": "^6.0.9",
-        "react": "~15.6.1",
-        "react-addons-css-transition-group": "^15.6.0",
-        "react-addons-transition-group": "^15.6.0",
-        "react-dom": "~15.6.1",
+        "moment": "^2.19.1",
+        "popper.js": "^1.12.5",
+        "postcss": "^6.0.13",
+        "react": "~16.0.0",
+        "react-addons-css-transition-group": "^15.6.2",
+        "react-addons-transition-group": "^15.6.2",
+        "react-dom": "~16.0.0",
         "react-toolbox": "^2.0.0-beta.12",
         "reactstrap": "^4.8.0",
         "reshake": "^1.0.7"
     },
     "devDependencies": {
-        "@types/node": "^8.0.24",
-        "@types/react": "~16.0.2",
-        "@types/react-dom": "~15.5.3",
+        "@types/node": "^8.0.34",
+        "@types/react": "~16.0.10",
+        "@types/react-dom": "~16.0.1",
         "awesome-typescript-loader": "~3.2.3",
-        "copy-webpack-plugin": "~4.0.1",
-        "css-loader": "~0.28.4",
-        "express": "^4.15.4",
-        "extract-text-webpack-plugin": "^3.0.0",
-        "file-loader": "~0.11.2",
+        "conventional-changelog": "^1.1.6",
+        "copy-webpack-plugin": "~4.1.1",
+        "css-loader": "~0.28.7",
+        "express": "^4.16.2",
+        "extract-text-webpack-plugin": "^3.0.1",
+        "file-loader": "~1.1.5",
         "html-webpack-plugin": "~2.30.1",
         "node-sass": "~4.5.3",
-        "npm-run-all": "~4.0.2",
+        "npm-run-all": "~4.1.1",
         "postcss-cssnext": "^3.0.2",
-        "postcss-loader": "^2.0.6",
+        "postcss-loader": "^2.0.7",
         "precss": "^2.0.0",
         "preprocess-loader": "~0.2.2",
-        "react-transition-group": "^1.0.0",
-        "rimraf": "~2.6.1",
-        "sass-lint": "^1.10.2",
+        "react-transition-group": "^2.2.1",
+        "rimraf": "~2.6.2",
+        "sass-lint": "^1.12.0",
         "sass-loader": "~6.0.6",
-        "style-loader": "~0.18.2",
-        "tslint": "^5.0.0",
-        "tslint-config-airbnb": "~5.2.1",
-        "typescript": "~2.4.2",
-        "url-loader": "~0.5.9",
-        "webpack": "~3.5.5",
-        "webpack-dev-server": "~2.7.1"
+        "standard-version": "^4.2.0",
+        "style-loader": "~0.19.0",
+        "tslint": "^5.7.0",
+        "tslint-config-airbnb": "~5.3.0",
+        "typescript": "~2.5.3",
+        "url-loader": "~0.6.2",
+        "webpack": "~3.7.1",
+        "webpack-dev-server": "~2.9.1"
     }
 }
